# GLES-FrameWork

./: README.md
Framwork/: CMakeLists.txt  README.md
Framwork/Common/: math_inc.cpp  math_inc.h
Framwork/Xcode/: CMakeCache.txt  cmake_install.cmake
Framwork/Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
Framwork/Xcode/TestOpenGL.build/Debug/ALL_BUILD.build/: Script-EC402A6678CC4A959358ECE5.sh  dgph
Framwork/Xcode/TestOpenGL.build/Debug/Engine.build/: dgph
Framwork/Xcode/TestOpenGL.build/Debug/Engine.build/Objects-normal/x86_64/: Engine.LinkFileList  basicMaterial.d  basicMaterial.dia  camera.d  clock.d  engine.d  engine.dia  entity.d  entity.dia  entityRenderer.d  entityRenderer.dia  game.d  game.dia  gameLoop.d  hello_triangle.d  hello_triangle.dia  light.d  light.dia  manager.d  material.d  math_inc.d  mesh.d  mesh.dia  node.d  node.dia  platform.d  platform.dia  profiler.d  quadTree.d  renderer.d  renderer.dia  resoucemanager.d  scene.d  scene.dia  sceneManager.d  sceneManager.dia  shader.d  shader.dia  shaderManager.d  shaderManager.dia  (+3 more)
Framwork/Xcode/TestOpenGL.build/Debug/GLAD.build/: dgph
Framwork/Xcode/TestOpenGL.build/Debug/GLAD.build/Objects-normal/x86_64/: GLAD.LinkFileList  glad.d
Framwork/Xcode/TestOpenGL.build/Debug/ZERO_CHECK.build/: Script-85DBAB1E732347C0BD5C5C22.sh  dgph
Framwork/Xcode/TestOpenGL.xcodeproj/: project.pbxproj
Framwork/Xcode/TestOpenGL.xcodeproj/project.xcworkspace/xcuserdata/jaccen.xcuserdatad/: UserInterfaceState.xcuserstate
Framwork/Xcode/TestOpenGL.xcodeproj/xcuserdata/jaccen.xcuserdatad/xcschemes/: xcschememanagement.plist
Framwork/Xcode/configuration/: root_directory.h
Framwork/iOS/: GLESViewController.h  GLESViewController.mm
Framwork/src/: hello_triangle.cpp
Framwork/src/Common/: Application.cpp  Application.hpp  CMakeLists.txt  application.h  basicmaterial.h  camera.cpp  camera.h  clock.h  configure.h  engine.cpp  engine.h  entityComponent.h  entityRenderer.cpp  game.cpp  game.h  gameLoop.cpp  light.h  material.h  math_inc.cpp  math_inc.h  mesh.cpp  mesh.h  meshFactory.h  node.cpp  node.hpp  platform.cpp  platform.h  playyuv.h  primitive.h  quadTree.h  renderer.cpp  renderer.h  resoucemanager.cpp  resoucemanager.h  scene.cpp  scene.h  sceneManager.h  shader.cpp  shader.h  shaderManager.cpp  (+4 more)
Platform/OpenGLES_Android/app/: CMakeLists.txt  build.gradle
Platform/OpenGLES_Android/app/src/androidTest/java/com/sxh/opengles/: ExampleInstrumentedTest.java
Platform/OpenGLES_Android/app/src/main/: AndroidManifest.xml
Platform/OpenGLES_Android/app/src/main/cpp/: native-lib.cpp
Platform/OpenGLES_Android/app/src/main/cpp/GLES/Android/: JniWarpper.cpp
Platform/OpenGLES_Android/app/src/main/cpp/GLES/Common/: Platform.h  Renderer.cpp  Renderer.h
Platform/OpenGLES_Android/app/src/main/java/com/sxh/opengles/: GLESView.java  MainActivity.java
Platform/OpenGLES_Android/app/src/main/res/layout/: activity_main.xml
Platform/OpenGLES_Android/app/src/test/java/com/sxh/opengles/: ExampleUnitTest.java
Platform/OpenGLES_Android/gradle/wrapper/: gradle-wrapper.properties
Platform/OpenGLES_iOS/OpenGLES/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
Platform/OpenGLES_iOS/OpenGLES.xcodeproj/: project.pbxproj
Platform/OpenGLES_iOS/OpenGLES.xcodeproj/project.xcworkspace/xcuserdata/jaccen.xcuserdatad/: UserInterfaceState.xcuserstate
Platform/OpenGLES_iOS/OpenGLES.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
Platform/OpenGLES_iOS/OpenGLES/Base.lproj/: Main.storyboard
Platform/OpenGLES_iOS/OpenGLES/GLES/Android/: JniWarpper.cpp
Platform/OpenGLES_iOS/OpenGLES/GLES/Common/: Platform.h  Renderer.cpp  Renderer.h
